bin_PROGRAMS = gramgen string_to_C

gramgen_SOURCES = gramgen.C \
		gram_util.C \
		pE_code.C \
		reentrant_preamble.C

#
# A utility that was useful to convert the preamble of the
# original reentrant TOL parser, tol_grammar.y, to code that
# writes it.
#
string_to_C_SOURCES = string_to_C.c

AM_CPPFLAGS = 
